<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg">
    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/contact_title"
            android:textSize="20dp"
            android:textColor="@color/coloronSeconary"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/contact_body"
        android:layout_marginTop="20dp"
        android:hint="@string/contact_msg"
        android:padding="10dp"
        android:background="@drawable/border"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/contact_btn"
            android:text="@string/contact_submit"
            app:cornerRadius="40dp" />
    </LinearLayout>


</LinearLayout>