<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="20dp"
    android:layout_marginTop="100dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/dialog_bg_less_curve">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/main_menu_profile_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_cross" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/main_menu_profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/main_menu_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@id/main_menu_profile_icon"
                android:text="hello"
                android:textColor="@color/coloronSeconary" />

            <TextView
                android:id="@+id/main_menu_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_menu_profile_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@id/main_menu_profile_icon"
                android:text="hello@gmail.com"
                android:textColor="@color/coloronSeconary" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/main_menu_profile_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/main_menu_profile_wishlist_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_wishlist" />

            <TextView
                android:id="@+id/main_menu_profile_wishlist_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/main_menu_profile_wishlist_icon"
                android:text="@string/view_lists"
                android:textColor="@color/coloronSeconary" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/main_menu_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/main_menu_dev_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/main_menu_dev_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/main_menu_dev_icon"
                android:text="@string/developer_options"
                android:textColor="@color/coloronSeconary" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/main_menu_profile_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/main_menu_profile_mode_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/main_menu_profile_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/main_menu_profile_mode_icon"
                android:text="@string/mode_dark"
                android:textColor="@color/coloronSeconary" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_menu_profile_walkthrough"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/main_menu_profile_walkthrough_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/main_menu_profile_walkthrough_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/main_menu_profile_walkthrough_icon"
                android:text="@string/walkthrough"
                android:textColor="@color/coloronSeconary" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_menu_profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/main_menu_profile_location_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/main_menu_profile_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/main_menu_profile_location_icon"
                android:text="@string/location"
                android:textColor="@color/coloronSeconary" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_menu_profile_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/main_menu_profile_review_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/main_menu_profile_review_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/main_menu_profile_review_icon"
                android:text="@string/review"
                android:textColor="@color/coloronSeconary" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/main_menu_profile_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/dialog_bg_bordered"
                android:text="@string/logout"
                android:textColor="@color/coloronSeconary" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_menu_profile_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/coloronSeconary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\u2022" />

                <TextView
                    android:id="@+id/main_menu_profile_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/terms_of_service"
                    android:textColor="@color/coloronSeconary"
                    android:textSize="12sp" />


            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>